# oit_chemistry_for_earth_sciences

./: .gitignore  CODEOWNERS  README.md  _config.yml  chembook_env2.yaml  myst.yml  mystmd-env.yaml  requirements.txt
_static/: thebe-local-config.html
chemistry_book/: chembook-env.yaml  intro.md  references.bib
chemistry_book/content/: template-chapter.md
chemistry_book/content/week 02/: Chemical_Reactions_in_Water.ipynb  Chemical_Reactions_in_Water.md  DissolutionGypsum0_highF.ipynb  Others.ipynb  Scratch.ipynb
content/: template-subchapter.md
content/test_space/: 02-notebook.ipynb  Linear_Transformations.md
content/week 02/: Chemical_Reactions_in_Water.ipynb  Week_Plan_Chemical_Reactions_in_Water.md
content/week 05/Test_01_Carbonate_Titration/: CO2-Water-Calcite.ipynb  carbonate_species.py  context.py  (+4 more)
old/: _config.yml  myst.yml  myst.yml.old
phreeqc_database/database/: Makefile.in
pyorchestra/v1.3.2/Install/setup_package/source/: CMakeLists.txt  Calculator.cpp  Calculator.h  Expander.cpp  Expander.h  ExpressionGraph.cpp  ExpressionGraph.h  ExpressionNode.h  ExpressionString.cpp  ExpressionString.h  FileBasket.cpp  FileBasket.h  FileID.h  IO.cpp  IO.h  MemoryNode.cpp  MemoryNode.h  Node.cpp  Node.h  NodeIOObject.cpp  NodeIOObject.h  NodeIOPair.cpp  NodeIOPair.h  NodeIOVar.cpp  NodeIOVar.h  NodeProcessor.cpp  NodeProcessor.h  NodeType.cpp  NodeType.h  OObject.cpp  OObject.h  OObjectBasket.cpp  OObjectBasket.h  OObjectPieceOfText.cpp  OObjectPieceOfText.h  OrchestraException.h  OrchestraReader.cpp  OrchestraReader.h  ParameterList.cpp  ParameterList.h  (+17 more)
(+60 files in other folders)
