add_library(All SHARED
Calculator.h Calculator.cpp
Expander.h Expander.cpp
ExpressionGraph.h ExpressionGraph.cpp
ExpressionNode.h ExpressionNode.cpp
ExpressionString.h ExpressionString.cpp
FileBasket.h FileBasket.cpp
FileID.h FileID.cpp
IO.h IO.cpp
MemoryNode.h MemoryNode.cpp
Node.h Node.cpp
NodeIOObject.h NodeIOObject.cpp
NodeIOPair.h NodeIOPair.cpp
NodeIOVar.h NodeIOVar.cpp
NodeProcessor.h NodeProcessor.cpp
NodeType.h NodeType.cpp
OObject.h OObject.cpp
OObjectBasket.h OObjectBasket.cpp
OObjectPieceOfText.h OObjectPieceOfText.cpp
OrchestraException.h OrchestraException.cpp
OrchestraReader.h OrchestraReader.cpp
ParameterList.h ParameterList.cpp
Parser.h Parser.cpp
ParserStringTokenizer.h ParserStringTokenizer.cpp
StopFlag.h StopFlag.cpp
stringhelper.h stringhelper.cpp
StringTokenizer.h StringTokenizer.cpp
UnEq.h UnEq.cpp
UnEqGroup.h UnEqGroup.cpp
Var.h Var.cpp
VarGroup.h VarGroup.cpp)

